# call-analysis

./: CMakeLists.txt  CallAnalysis.cpp  CallAnalysis.h  LLVMAssignment.cpp  LLVMAssignment2.cpp  Makefile
assign2-tests/: gen_bc.sh  test17.c  test18.c  test19.c  test21.c  test22.c  test23.c  test24.c  test25.c  test26.c
